--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=1.14.4+build.2
+	minecraft_version=19w36a
+	yarn_mappings=19w36a+build.1
 	loader_version=0.4.8+build.157
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = net.fabricmc
-	archives_base_name = fabric-example-mod
+	mod_version = 0.0.2
+	maven_group = io.github.indicode.fabric
+	archives_base_name = vanish
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
