--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,10 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.4.8+build.157
 
 # Mod Properties
-	mod_version = 0.0.3
+	mod_version = 0.0.4
 	maven_group = io.github.indicode.fabric
 	archives_base_name = vanish
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+	thimble_permissions_version=0.0.5
