--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.3-SNAPSHOT'
+	id 'fabric-loom' version '0.2.5-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -14,6 +14,8 @@ minecraft {
 }
 repositories {
 	mavenLocal()
+	maven { url 'https://jitpack.io' }
+	maven { url 'http://server.bbkr.space:8081/artifactory/libs-release' }
 }
 dependencies {
 	//to change the versions see the gradle.properties file
@@ -21,7 +23,8 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	//modCompile "io.github.indicode.fabric:LanOps:1.0.0"
+	modCompile "io.github.indicode.fabric:lan-deauth:1.1.0"
+	modCompile "com.github.indi-code:Thimble-Permissions:${project.thimble_permissions_version}"
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
