--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,11 @@ dependencies {
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modCompile "io.github.indicode.fabric:lan-deauth:1.1.0"
-	modCompile "com.github.indi-code:Thimble-Permissions:${project.thimble_permissions_version}"
+	modImplementation "com.github.indi-code:Thimble-Permissions:${project.thimble_permissions_version}"
+	modImplementation "com.github.indi-code:WorldDataLib:${project.worlddatalib_version}"
+
+	include "com.github.indi-code:Thimble-Permissions:${project.thimble_permissions_version}"
+	include "com.github.indi-code:WorldDataLib:${project.worlddatalib_version}"
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
