Updates to 1.15 along with dependencies. Fresh intermittent bugs!

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-minecraft_version=19w42a
-yarn_mappings=19w42a+build.1
-loader_version=0.6.3+build.167
+minecraft_version=1.15-pre2
+yarn_mappings=1.15-pre2+build.2
+loader_version=0.7.1+build.173
 
 # Mod Properties
-	mod_version = 0.0.10
+	mod_version = 0.0.11
 	maven_group = io.github.indicode.fabric
 	archives_base_name = vanish
 
 # Dependencies
-thimble_permissions_version=e2edeca2a6
-worlddatalib_version=709e2633a1
+thimble_permissions_version=26b2bbfb06
+worlddatalib_version=457f5d3b62
