--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.5-SNAPSHOT'
+	id 'fabric-loom' version '0.2.6-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -20,15 +20,15 @@ repositories {
 dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modCompile "io.github.indicode.fabric:lan-deauth:1.1.0"
-	modImplementation "com.github.indi-code:Thimble-Permissions:${project.thimble_permissions_version}"
-	modImplementation "com.github.indi-code:WorldDataLib:${project.worlddatalib_version}"
+	//modCompile "io.github.indicode.fabric:lan-deauth:1.1.0"
+	modImplementation "com.github.voidpointerdev:Thimble-Permissions:${project.thimble_permissions_version}"
+	modImplementation "com.github.voidpointerdev:WorldDataLib:${project.worlddatalib_version}"
 
-	include "com.github.indi-code:Thimble-Permissions:${project.thimble_permissions_version}"
-	include "com.github.indi-code:WorldDataLib:${project.worlddatalib_version}"
+	//include "com.github.indi-code:Thimble-Permissions:${project.thimble_permissions_version}"
+	//include "com.github.indi-code:WorldDataLib:${project.worlddatalib_version}"
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
